# zerocoder_test

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  logic.py  main.py  pyproject.toml  pyrightconfig.json  readme_rus.md
alembic/: env.py
alembic/versions/: 0001_foundation_schema.py  0002_phase2_bybit_storage.py  0003_phase3_paper_replay_runtime.py  0004_grid_strategy_state.py
config/: base.yaml  dev.yaml  grid_dca_v1.yaml  live_binance_prod_micro_fast.yaml  live_binance_testnet.yaml  live_prod_micro.yaml  live_testnet.yaml  prod.yaml
docs/: codebase_structure.md
docs/runbooks/: live_mainnet_micro.md  live_restart_recovery.md  live_testnet_smoke.md  llm_advisory.md  paper_soak.md
src/trading_bot/: __init__.py  app.py  cli.py  main.py  timeframes.py
src/trading_bot/alerts/: __init__.py  protocols.py  service.py  telegram.py
src/trading_bot/bootstrap/: __init__.py  container.py  (+1 more)
tests/integration/: test_app.py  test_cli.py  test_runtime_runner.py
tests/smoke/: test_validate_config_smoke.py
tests/unit/: test_binance_normalizers.py  test_binance_rest_client.py  test_bracket_manager.py  test_bybit_normalizers.py  test_bybit_rest_client.py  test_config_loader.py  test_health.py  test_live_risk_guards.py  test_live_venue.py  test_llm_budget_guard.py  test_llm_service.py  test_marketdata_snapshots.py  test_paper_fill_model.py  test_paper_venue_phase5.py  test_phase3_placeholder_strategy.py  test_reconciliation.py  test_replay_reader.py  test_runtime_control.py  test_runtime_risk_engine.py  test_smc_scalper_v1.py  test_telegram_alerts.py
(+73 files in other folders)
