[project]
name = "trading-bot"
version = "0.1.0"
description = "Foundation slice for a multi-exchange trading bot."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.14.0",
  "asyncpg>=0.30.0",
  "fastapi>=0.115.0",
  "httpx>=0.28.0",
  "prometheus-client>=0.21.0",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.7.0",
  "pyyaml>=6.0.2",
  "redis>=5.2.0",
  "sqlalchemy>=2.0.36",
  "structlog>=24.4.0",
  "typer>=0.15.0",
  "uvicorn[standard]>=0.32.0",
]

[dependency-groups]
dev = [
  "mypy>=1.13.0",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=6.0.0",
  "ruff>=0.8.0",
]

[project.scripts]
bot = "trading_bot.cli:app"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trading_bot"]

[tool.uv]
default-groups = ["dev"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "ASYNC"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = []
packages = ["trading_bot"]
